Add simple azure sdk.

--- a/JoinMeAndroid/app/src/main/res/layout/activity_maps.xml
+++ b/JoinMeAndroid/app/src/main/res/layout/activity_maps.xml
@@ -5,10 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:text="hellow"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"></android.support.v7.widget.Toolbar>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="hellow"/>
 
     <fragment
         android:id="@+id/map"
