--- a/JoinMeAndroid/app/src/main/res/values/colors.xml
+++ b/JoinMeAndroid/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="gray_dl_toolbar_title">#4E5260</color>
+    <color name="green_btn">#D0FA58</color>
+    <color name="white">#FFFFFF</color>
 </resources>
