--- a/JoinMeAndroid/app/src/main/res/values/styles.xml
+++ b/JoinMeAndroid/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DefaultToolbarTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">21sp</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:textColor">@color/gray_dl_toolbar_title</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
 </resources>
